html padding-left

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -11,7 +11,7 @@ html {
 }
 
 html,body {
-	/*padding-left: 3px;*/
+	padding-left: 3px;
 	font-family: Verdana;
 	background-color: white;
 	color: black;
