generate QRCode without external service

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -84,6 +84,7 @@ a:active  { color: #0000FF; }  /* selected   */
 <script type="text/javascript">
 	var postTiny = "tiny";
 	var redirTiny = "r";
+	var qrTiny = "q";
 	var baseURL = $(location).attr('href');
 	var t = {
 		request : function() {
@@ -101,7 +102,8 @@ a:active  { color: #0000FF; }  /* selected   */
 		},
 		update : function(id) {
 			var shorted = baseURL + redirTiny + "/" + id;
-			var qrImg = "https://chart.googleapis.com/chart?chs=150x150&cht=qr&chld=H|1&chl=" + shorted; // deprecated
+			var qrImg = baseURL + qrTiny + "/" + id + "?size=150";
+			//var qrImg = "https://chart.googleapis.com/chart?chs=150x150&cht=qr&chld=H|1&chl=" + shorted; // deprecated
 			$('#response').val(shorted);
 			$('.link').html('<a href="' + shorted + '">Link</a>');
 			$('.qr').html('<img src="' + qrImg + '">');
